# ASCII-Celestial-Visualizer

./: CONTRIBUTING.md  README.md  codecov.yml  meson.build
data/: bsc5_constellations.txt  bsc5_names.txt  cities.csv  keplerian_elements.c  keplerian_elements.h  meson.build
include/: astro.h  bit.h  city.h  coord.h  core.h  core_position.h  core_render.h  drawing.h  macros.h  parse_BSC5.h  stopwatch.h  strptime.h  term.h  version.h
scripts/: bsc5_ascii_to_bin.py  convert_constellations.py  embed.py  embed.sh  filter_cities.py  format.sh
src/: astro.c  bit.c  city.c  coord.c  core.c  core_position.c  core_render.c  drawing.c  main.c  meson.build  parse_BSC5.c  stopwatch.c  strptime.c  term.c
test/: astro_test.c  bit_test.c  city_test.c  coord_test.c  core_test.c  drawing_test.c  meson.build  stopwatch_test.c
