test_files += [
    files('coord_test.c'),
    files('astro_test.c'),
    files('city_test.c'),
    files('bit_test.c'),
    files('core_test.c'),
    files('stopwatch_test.c'),
    files('drawing_test.c')
]

test_include_dirs += [
    include_directories('third_party/unity-v2.6.0'),
]

unity_source_files += [
    files('third_party/unity-v2.6.0/unity.c')
]
